Tue Jul 20 22:26:29 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkfilechooserutils.h: 
	* gtk/gtktoolbutton.c: 
	* gtk/gtktoolbar.c: 
	* gtk/gtkicontheme.c: 
	* gtk/gtkcalendar.c: 
	* demos/gtk-demo/ui_manager.c: 
	* demos/gtk-demo/appwindow.c: Remove trailing commas
	from enumerations.  (#148035)

2004-07-20  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkcellrenderer.c (gtk_cell_renderer_class_init): Fix the
	documentation comment for the editing-started signal.

	* gtk/gtkmarshalers.list: Added VOID:OBJECT,STRING for
	GtkCellRenderer::editing-started.

2004-07-20  Matthias Clasen  <mclasen@redhat.com>

	* tests/testactions.c (main): 
	* tests/testmerge.c (main): Add some refcount debugging.

	* gtk/gtkuimanager.c (update_node, free_node): Ref an sink
	all proxies, so that we can properly clean up floating proxies
	which the app didn't adopt.  (#147926, Tommi Komulainen)

2004-07-20  Matthias Clasen  <mclasen@redhat.com>

	Allow custom initialization of cell editables.  (#147221)
	
	* gtk/gtkcellrenderer.h (struct _GtkCellRendererClass): 
	* gtk/gtkcellrenderer.c (gtk_cell_renderer_class_init): Add a 
	::editing-started signal as a hook for setting up the 
	GtkCellEditable.
	(gtk_cell_renderer_start_editing): ...and emit it here.

Mon Jul 19 23:51:50 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Set drag_pos
	before grabbing the focus, since we may reenter into 
	gtk_tree_view_motion_resize_column() which requires drag_pos
	to be set.  (#147913, Guilherme Salgado, patch by John Finlay) 

Mon Jul 19 23:51:50 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_enter_notify): Don't
	use uninitialized node pointer.  (#147911, Peter Zelezny)

Tue Jul 20 04:34:56 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* configure.in: Bump version number

Sun Jul 18 17:21:10 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* === Released 2.5.0 ===

	* NEWS: updates
