@@ -1,3 +1,8 @@
+Tue Jul 20 23:11:23 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk/x11/gdkevents-x11.c: Hook up gtk-menu-bar-accel to
+	an XSetting, Gtk/MenuBarAccel.  (#120859, Scott James Remnant)
+
 Tue Jul 20 22:26:29 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkfilechooserutils.h: 
